versions/0.5/spec.ru.md
# Ktav — Формат Записанной Конфигурации

**Languages:** [English](spec.md) · **Русский** · [简体中文](spec.zh.md)

> **Информативный перевод.** Канонической, нормативной версией этой
> спецификации является английский файл [`spec.md`](spec.md) в том же
> каталоге. Если данный русский перевод расходится с английским
> оригиналом, авторитетным является английский оригинал.

**Версия:** 0.5.0
**Дата:** 2026-05-28

## Аннотация

Ktav — это конфигурационный формат на основе обычного текста,
спроектированный так, чтобы каждая строка либо самодостаточна, либо
зависит только от явно видимых открывающих скобок выше. Он
предоставляет JSON-форму (скаляры, массивы, объекты, `null`,
булевы значения) без JSON-пунктуации: без кавычек вокруг строк,
без escape-последовательностей в обычном случае. Вложенные ключи
используют точечный путь. Многострочные строки и однострочные
составные значения используют небольшие явные маркеры.

Данный документ описывает синтаксис и семантику формата на версии
0.5.0. Реализации на любом языке программирования могут заявить
«соответствие Ktav 0.5.0» если и только если они выполняют каждое
нормативное утверждение ниже.

## 1. Введение

Документ Ktav — это последовательность строк, которые вместе
описывают иерархический объект или массив. Типичное применение —
конфигурация приложений: документ пишется людьми, читается
программами и диффится в системе контроля версий.

Руководящий принцип формата:

> **Каждое правило локально. Смысл каждой строки либо самоочевиден,
> либо зависит только от видимых скобок выше.**

Это исключает значимые отступы (YAML), запятые-разделители (JSON),
якоря и алиасы (YAML), схемные директивы и heredoc-маркеры,
пересекающие много строк.

По сравнению с 0.1.x, версия 0.5.0:

- Убирает типизированные маркеры `:i` и `:f`. Числа, булевы и `null`
  выводятся из лексической формы скаляра. Сырой маркер `::` сохранён
  для принудительной String, когда форма иначе совпадала бы с числом
  или ключевым словом.
- Добавляет однострочные составные значения — `{key: value, key2: value}`
  и `[v1, v2, v3]` — пригодные как значение или как весь документ.
- Заменяет одиночные `#` комментарии на **двойные `##`** комментарии,
  занимающие отдельную строку. Одиночный `#` теперь обычный символ.

## 2. Соглашения

Ключевые слова **MUST**, **MUST NOT**, **SHOULD**, **SHOULD NOT** и
**MAY** в этом документе следует трактовать в соответствии с RFC 2119,
когда они написаны заглавными буквами. Эти же слова строчными — это
обычный английский язык (в переводе: «должны», «не должны», «следует»,
«не следует», «могут»).

## 3. Лексическая структура

### 3.1 Набор символов

Документ Ktav — последовательность Unicode-кодовых точек,
закодированная в UTF-8. Реализации MUST отвергать документы, не
являющиеся корректным UTF-8.

### 3.2 Строки

Завершителем строки является одна из трёх байтовых последовательностей:

- `LF` (`0x0A`)
- `CR` (`0x0D`)
- `CR LF` (`0x0D 0x0A`)

Реализации MUST трактовать все три как эквивалентные завершители.
Документ MAY иметь последнюю строку без замыкающего завершителя.

Байт `CR` никогда не появляется как содержательный байт на этапе
разбора: он всегда является завершителем (один или в паре со следующим
`LF`). String-значение может нести байт `CR` только через escape-
последовательность `\r` внутри однострочного скаляра (§ 3.7, § 5.8);
такое Value не представимо в канонической форме (§ 5.9.7).

Внутри однострочного составного значения (§ 5.8) парсер MUST NOT
пересекать завершитель строки: незакрытое однострочное составное в
конце строки — это ошибка (§ 6.11).

### 3.3 Пробельные символы

ASCII пробел (`0x20`) и горизонтальная табуляция (`0x09`) являются
**пробельными** байтами. Реализации MAY дополнительно трактовать другие
Unicode-символы `White_Space` как пробельные; переносимые документы
SHOULD использовать только пробел и табуляцию.

Пробелы в начале строки — это **отступ** и значимы только для
читабельности; парсер их игнорирует (за исключением случаев, когда
они служат разделителем внутри токенов строки). Пробельные символы
внутри токенов строки и вокруг разделителей однострочных составных
значений необязательны везде, где грамматика это допускает (§ 4);
реализации MAY генерировать каноническое форматирование с явным
одиночным пробелом-разделителем.

### 3.4 Комментарии

**Комментарий** — это строка, первые непробельные байты которой —
`##` (два ASCII `#`-байта). Остаток строки до завершителя строки
включительно — тело комментария. Комментарии не порождают Value и
игнорируются.

Одиночный байт `#` не имеет специального значения: `#-начинающийся`
текст в строке без ведущего `##` — это обычный символ скаляра / ключа.

Комментарии MUST занимать свою отдельную строку; завершающие
комментарии в конце содержательной строки не поддерживаются.
Поскольку комментарий распознаётся только в начале обрезанной
строки, литеральная пара байтов `##` в середине значения, ключа
или иного содержимого — это просто два символа `#` и не требует
экранирования: escape-последовательности `\#` в 0.5.0 нет.

### 3.5 Пустые строки

**Пустая строка** — строка, состоящая только из пробельных байтов.
Пустые строки не порождают Value и игнорируются, за исключением
содержимого внутри многострочных строк (§ 5.6).

### 3.6 Числовые литералы

**Целочисленный литерал** соответствует следующей грамматике (где `*`
означает ноль или более, `+` — один или более, `?` — необязательный,
`|` — альтернатива):

```
integer        ::= sign? ( hex | oct | bin | dec )
sign           ::= "+" | "-"
hex            ::= "0x" hex_digit (("_")? hex_digit)*
oct            ::= "0o" oct_digit (("_")? oct_digit)*
bin            ::= "0b" bin_digit (("_")? bin_digit)*
dec            ::= dec_digit (("_")? dec_digit)*
hex_digit      ::= [0-9a-fA-F]
oct_digit      ::= [0-7]
bin_digit      ::= [0-1]
dec_digit      ::= [0-9]
```

Подчёркивания-разделители допускаются **между** двумя последовательными
цифрами. Ведущее подчёркивание, замыкающее подчёркивание, два
последовательных подчёркивания или подчёркивание сразу после префикса
базы (`0x_`, `0o_`, `0b_`) делают литерал **не** целым числом;
текстовая форма проваливается в String по § 5.2.

**Float-литерал** соответствует одной из следующих двух альтернатив:

```
float          ::= sign? dec_part "." dec_part exponent?
                 | sign? dec_part exponent
dec_part       ::= dec_digit (("_")? dec_digit)*
exponent       ::= ("e" | "E") sign? dec_part
```

Первая альтернатива требует и десятичную точку, и цифры с обеих
сторон точки (экспонента опциональна). Вторая альтернатива требует
экспоненту (без десятичной точки). Чистая последовательность цифр
без `.` и без экспоненты — это integer (выше), не float. Формы
`1.`, `.5`, `1.2.3`, `1e`, `1e+` не соответствуют ни одной
альтернативе и проваливаются в String.

### 3.7 Escape-последовательности

Внутри **inline-скалярного значения** (тела пары или элемента
массива, появляющегося внутри однострочного составного значения,
§ 5.8), байт обратной косой `\` начинает **escape-последовательность**.
Распознаются следующие **восемь** escape-последовательностей; каждая
заменяется указанным байтом перед дальнейшей классификацией (§ 5.2):

| Последовательность | Замена |
|----------|-------------|
| `\\`     | `\` (один обратный слэш) |
| `\,`     | `,` |
| `\}`     | `}` |
| `\]`     | `]` |
| `\{`     | `{` |
| `\[`     | `[` |
| `\n`     | LF (`0x0A`) |
| `\r`     | CR (`0x0D`) |

Четыре скобочных escape-формы (`\}`, `\]`, `\{`, `\[`) существуют
ради симметрии: у любого байта, который может открыть или закрыть
inline-составное, есть явная литеральная форма. `\{` и `\[` чаще
всего нужны в *начале* inline-скалярного значения — там
не-экранированные `{` / `[` открыли бы вложенное составное —
но парсер принимает их в любой позиции inline-скалярного контекста.

Любая другая форма `\X` (включая `\#`, `\:`, `\t`,
`\ <пробел>`, `\<любой-другой>`) — ошибка `BadEscapeSequence` (§ 6.13).

Escape-последовательности НЕ обрабатываются в:

- Ключах (часть ключа перед первым `:` пары, § 5.3).
- Многострочных скалярных значениях (тело пары или элемента массива,
  занимающее всё содержимое строки, § 5.3 / § 5.4).
- Содержимом многострочной строки (`(…)` и `((…))`, § 5.6) —
  содержимое verbatim.
- Комментариях (§ 3.4) — содержимое игнорируется.

В контекстах без обработки escape-последовательностей литеральная
последовательность байтов `\X` — это два символа (`\`, затем `X`).

## 4. Грамматика

Грамматика представлена в полуформальной нотации, по одному правилу на
строку. Терминалы — в двойных кавычках; `<имя>` обозначает
нетерминал; `*` — ноль или более, `+` — один или более, `?` —
необязательный, `|` — альтернатива. `(ws)` означает ноль или более
пробельных байтов.

```
<document>      ::= <line>*
<line>          ::= <comment> | <blank> | <header-line> | <pair-line>
                  | <array-item-line> | <multiline-content-line>

<comment>       ::= (ws) "##" (любые байты до конца строки)
<blank>         ::= (ws)

<header-line>   ::= (ws) "{" (ws) eol                ; открытие объекта
                  | (ws) "}" (ws) eol                ; закрытие объекта
                  | (ws) "[" (ws) eol                ; открытие массива
                  | (ws) "]" (ws) eol                ; закрытие массива
                  | (ws) ")" (ws) eol                ; закрытие многострочной (stripped)
                  | (ws) "))" (ws) eol               ; закрытие многострочной (verbatim)

<pair-line>     ::= <key> ":"  <sep-end> <value-part-opt> eol    ; обычная, скаляр через § 5.2
                  | <key> "::" <sep-end> <value-part-opt> eol    ; литеральная String

<key>           ::= <segment> ("." <segment>)*
<segment>       ::= <key-char>+
<key-char>      ::= любая UTF-8 кодовая точка, за исключением:
                    ASCII управляющих байтов < 0x20 (кроме табуляции 0x09),
                    DEL (0x7F),
                    завершителя строки (LF 0x0A, CR 0x0D),
                    "[", "]", "{", "}", "(", ")", ":", ","
                    (примечание: ASCII пробел 0x20 И табуляция 0x09
                    РАЗРЕШЕНЫ внутри сегмента ключа, так что ключ MAY
                    содержать внутренний пробельный символ, например
                    "first name: alice"; "#" разрешён; пара "##" становится
                    маркером комментария только в начале обрезанной
                    строки, § 3.4)

                    Обрезка сегмента ключа: сегмент ключа **обрезается**
                    от ведущих и хвостовых ASCII-пробельных байтов
                    (пробел 0x20, табуляция 0x09) перед валидацией по
                    <key-char>+. Внутренние пробельные байты внутри
                    сегмента сохраняются verbatim. Сегмент, пустой
                    после обрезки, — ошибка EmptyKey (§ 6.5).

<sep-end>       ::= 1*ws | &eol
<value-part-opt> ::= <value-start> | ""
<value-start>   ::= "{" (ws) "}" (ws)                ; пустой inline-объект
                  | "[" (ws) "]" (ws)                ; пустой inline-массив
                  | "{" (ws) <inline-pair-list> (ws) "}" ; inline-объект (§ 5.8)
                  | "[" (ws) <inline-item-list> (ws) "]" ; inline-массив (§ 5.8)
                  | "{" (ws) &eol                    ; открытие объекта (многострочное тело)
                  | "[" (ws) &eol                    ; открытие массива (многострочное тело)
                  | "(" (ws) &eol                    ; открытие многострочной (stripped)
                  | "((" (ws) &eol                   ; открытие многострочной (verbatim)
                  | "()" (ws)                        ; пустая inline (даёт "")
                  | "(())" (ws)                      ; пустая inline (даёт "")
                  | <scalar-body>                    ; скалярное значение, через § 5.2

<scalar-body>   ::= (ws) any-chars-until-eol

<array-item-line> ::= <item-literal> | <item-inline> | <item-value>
<item-literal>  ::= (ws) "::" <sep-end> <any-chars>? eol
<item-inline>   ::= (ws) "{" (ws) <inline-pair-list> (ws) "}" (ws) eol
                  | (ws) "[" (ws) <inline-item-list> (ws) "]" (ws) eol
                  | (ws) "{}" (ws) eol
                  | (ws) "[]" (ws) eol
<item-value>    ::= <value-start> eol

<inline-pair-list> ::= <inline-pair> ( (ws) "," (ws) <inline-pair> )* ( (ws) "," )?
<inline-pair>      ::= <key> (ws) ":"  (ws) <inline-value> (ws)
                     | <key> (ws) "::" (ws) <inline-value> (ws)

<inline-item-list> ::= <inline-value> ( (ws) "," (ws) <inline-value> )* ( (ws) "," )?

<inline-value>     ::= "{" (ws) <inline-pair-list> (ws) "}"
                     | "[" (ws) <inline-item-list> (ws) "]"
                     | "{" (ws) "}"
                     | "[" (ws) "]"
                     | <inline-scalar>
<inline-scalar>    ::= последовательность байтов до неэкранированного
                       "," / "}" / "]" или до конца строки (что —
                       ошибка по § 6.11); escape-последовательности
                       по § 3.7 обрабатываются; окружающие пробелы
                       обрезаются перед классификацией по § 5.2

<multiline-content-line> ::= любая строка внутри открытого <multiline>;
                             терминатор (")" или "))") закрывает блок
```

Примечания к нотации:

- `(ws)` — ноль или более ASCII-пробельных байтов.
- `1*ws` — **один или более** ASCII-пробельных байтов.
- `<sep-end>` — «как минимум один пробельный байт или конец строки».
  Используется после разделителей пар многострочной формы (`:`,
  `::`). Запись `key:value` (без пробела, без EOL после разделителя) —
  синтаксическая ошибка в многострочной форме пары — см. § 6.10.
  Inline-пары в составных (§ 5.8) НЕ требуют пробела после `:` /
  `::`.
- `&eol` — нулевой ширины положительный lookahead.
- Альтернативы `<inline-value>` проверяются **слева-направо** по
  первому непробельному байту в позиции inline-значения. Если этот
  байт — `{`, значение — вложенный inline-объект (одна из первых
  двух `{`-альтернатив) и MUST закрыться `}` на той же строке; если
  байт — `[`, значение — вложенный inline-массив. Любой другой
  первый байт делает значение `<inline-scalar>`. Решение принимается
  один раз, в начале позиции inline-значения; последующие байты
  `{` / `[` внутри inline-скаляра — литеральные данные (§ 5.8.5).

## 5. Семантика

Соответствующий парсер порождает **Value** для конформного документа.
Value — одно из: **Null**, **Bool**, **Integer**, **Float**, **String**,
**Array**, **Object**.

- **Null** — единственное выделенное значение.
- **Bool** — `true` или `false`.
- **Integer** — числовой скаляр, несущий целочисленное значение.
  Реализация MUST поддерживать как минимум диапазон i64
  (-2^63 .. 2^63 - 1) и MAY поддерживать более широкий (например,
  произвольную точность). Каноническая текстовая форма Integer —
  десятичная строка по основанию 10 без подчёркиваний и без
  ведущих нулей (кроме литерала `0`); ведущий `+` отбрасывается;
  знаковые нули (`+0`, `-0`) нормализуются к `0`. Каноническая
  форма используется реализациями-эмиттерами (§ 5.9).
- **Float** — числовой скаляр, несущий числовое значение.
  Внутреннее представление определяется реализацией (IEEE 754
  binary64, decimal произвольной точности или иное). Каноническую
  текстовую форму (§ 5.9) MUST использовать реализации-эмиттеры.
  Value **не** сохраняет текстовую форму как написано;
  подчёркивания, выбор `e` vs `E` и ведущий `+` — не часть Value.
- **String** — (возможно пустая) UTF-8 строка.
- **Array** — упорядоченная последовательность Values.
- **Object** — упорядоченная последовательность пар (имя, Value),
  где имена — строки. Уникальность имён обязательна внутри Object
  (§ 5.5).

Корневое Value, получаемое разбором документа, — это либо Object,
либо Array (каждое возможно пустое). Тип корня определяется первой
содержательной строкой документа — см. § 5.0.1.

### 5.0.1 Определение типа корня

«Первая содержательная строка» — первая строка, не являющаяся ни
пустой (§ 5.1 правило 1), ни комментарием (§ 5.1 правило 2). Тип
корня устанавливается по этой строке так. Правила применяются по
порядку; побеждает первое совпавшее.

1. Если у документа **нет содержательных строк** (пустой документ
   либо только пустые/комментарии) → корень — пустой **Object**.
2. Если первая содержательная строка после trim — **замкнутый
   inline-объект** `{ … }` (с балансированным содержимым и
   соответствующей `}` как последним непробельным байтом строки
   после trim) → корень **И ЕСТЬ** этот inline Object. Документ
   MUST не иметь дальнейших содержательных строк; любая
   последующая непустая некомментарная строка — ошибка
   `OrphanLineAfterTopLevelInline` (§ 6.14).
3. Если первая содержательная строка после trim — **замкнутый
   inline-массив** `[ … ]` (с балансированным содержимым и
   соответствующей `]` как последним непробельным байтом строки
   после trim) → корень **И ЕСТЬ** этот inline Array. Документ
   MUST не иметь дальнейших содержательных строк; любая
   последующая непустая некомментарная строка — ошибка
   `OrphanLineAfterTopLevelInline` (§ 6.14).
4. Если первая содержательная строка после trim — **одиночный `{`**
   (только открывающая фигурная скобка, возможно с пробелами до
   и после) → корень — **многострочный Object**, открытый этой
   скобкой. Соответствующая `}` на последующей строке закрывает
   корень; любое содержимое после этой строки закрытия —
   `OrphanLineAfterTopLevelInline` (§ 6.14).
5. Если первая содержательная строка после trim — **одиночный `[`**
   → корень — **многострочный Array**, открытый этой скобкой.
   Соответствующая `]` закрывает корень; содержимое после строки
   закрытия — `OrphanLineAfterTopLevelInline` (§ 6.14).
6. Иначе, если первая содержательная строка после trim — **pair
   line** по § 5.3 (`key: …` / `key:: …`, включая точечные ключи)
   → корень — **Object** с этой строкой как первой парой.
7. Иначе, если первая содержательная строка после trim распознана
   как **array-item line** по § 5.4 (за исключением правил 4 / 5
   выше) — голый скаляр, raw-маркер `:: …`, многострочный опенер
   `(` / `((`, пустые-составные сокращения `{}` / `[]` / `()` /
   `(())`, или замкнутое inline-составное, не подошедшее под
   правила 2 / 3 — → корень — **Array** с этой строкой как
   первым элементом.
8. Иначе (голый закрывающий `}` / `]` на первой содержательной
   строке или иначе неклассифицируемая строка) — ошибка
   `UnbalancedBracket` (§ 6.1).

Тип корня **фиксирован** первой содержательной строкой.

Замечание (vs. 0.1.1): правила 4 и 5 отличаются от предыдущих
версий. В 0.1.1 одиночный `{` или `[` на первой содержательной
строке открывал одиночный Object / Array элемент внутри
корневого Array. В 0.5.0 одиночный опенер — сам корень: один
многострочный Object / Array на весь документ, без обёртки Array.
JSONL-стиль (несколько top-level inline-объектов `{a:1}` и
`{b:2}`, дающие корневой Array) больше не принимается.

### 5.1 Диспетчеризация по строкам

Парсер MUST классифицировать каждую строку после trim, применяя
правила в точности в следующем порядке:

1. Если обрезанная строка пуста → пустая строка; без эффекта, кроме
   как где оговорено (§ 5.6, многострочная).
2. Если обрезанная строка начинается с `##` → комментарий;
   игнорируется (§ 3.4).
3. **Если парсер находится внутри открытой многострочной строки** (§ 5.6):
   если обрезанная строка равна терминатору блока, многострочная строка
   закрывается; иначе сырая (необрезанная) строка добавляется к
   содержимому многострочной строки.
4. Если это первая содержательная строка документа, тип корня
   устанавливается согласно § 5.0.1; обработка затем продолжается
   этой же строкой через диспетчеризацию по выбранному типу
   (правила 5–8).
5. Если обрезанная строка в точности `}` → закрыть самый внутренний
   открытый Object, иначе ошибка (§ 6.1).
6. Если обрезанная строка в точности `]` → закрыть самый внутренний
   открытый Array, иначе ошибка (§ 6.1).
7. Если самый внутренний открытый составной элемент — Array, либо
   нет открытых и корень — Array (§ 5.0.1): трактовать строку как
   **array-item line** (§ 5.4).
8. Если самый внутренний открытый составной элемент — Object, либо
   нет открытых и корень — Object (§ 5.0.1): трактовать строку как
   **pair line** (§ 5.3).

### 5.2 Интерпретация скалярного значения

Дано **скалярное тело** — обрезанный текст, полученный из тела
pair-line после `:`-разделителя, либо обрезанный текст inline-скаляра
после обработки escape (§ 3.7), либо обрезанный текст array-item-line
без маркера. Парсер классифицирует его так. Правила применяются по
порядку; побеждает первое совпавшее. Тела после `::` НЕ
диспетчеризуются через § 5.2; они обрабатываются по § 5.3 / § 5.4 /
§ 5.8 как сырые Strings.

1. Если тело — в точности `{` → открыть новый Object scope
   (многострочный).
2. Если тело — в точности `[` → открыть новый Array scope
   (многострочный).
3. Если тело — в точности `(` → открыть многострочную строку
   (stripped, § 5.6).
4. Если тело — в точности `((` → открыть многострочную строку
   (verbatim, § 5.6).
5. Если тело — `()` или `(())` → пустая String.
6. Если тело соответствует форме **замкнутого inline-объекта**
   `{ … }` (балансированные разделители, соответствующая `}` в
   конце тела) → дать inline Object по § 5.8.
7. Если тело соответствует форме **замкнутого inline-массива**
   `[ … ]` → дать inline Array по § 5.8.
8. Если тело начинается с `{`, но не подпадает под правила 1 или 6
   → незакрытый inline-объект — ошибка (§ 6.11).
9. Если тело начинается с `[`, но не подпадает под правила 2 или 7
   → незакрытый inline-массив — ошибка (§ 6.11).
10. Если тело — в точности `null` → Null.
11. Если тело — в точности `true` → Bool `true`.
12. Если тело — в точности `false` → Bool `false`.
13. Если тело соответствует грамматике **integer literal** (§ 3.6)
    и числовое значение помещается как минимум в диапазон i64
    (-2^63 .. 2^63 - 1, т.е. -9_223_372_036_854_775_808 ..
    9_223_372_036_854_775_807): Integer (текст Value = каноническая
    десятичная нормализация по § 5). Реализации MAY поддерживать
    более широкий диапазон (например, произвольная точность /
    `bignum`); значение, превышающее поддерживаемый реализацией
    диапазон, проваливается в правило 15 (String). Для гарантии
    интероперабельности переносимый документ SHOULD NOT полагаться
    на Integer-типизацию вне i64-диапазона; 0.5.0-парсер на
    строго-i64 бэкенде MUST помещать такие переполняющие тела в
    правило 15.
14. Если тело соответствует грамматике **float literal** (§ 3.6):
    Float, несущий числовое значение, разобранное из тела.
    Внутреннее представление определяется реализацией (см. § 5);
    каноническая текстовая форма указана в § 5.9.8.
15. Иначе → String, содержимое которой — тело как написано.

Ключевые формы `null`, `true`, `false` и числовые литералы
сопоставляются **с учётом регистра**. Тело `True`, `NULL`, `False`,
`0xZZ`, `0o9` и т.д. — это String.

Классификация скаляра в этой секции — детерминированная функция
обрезанной, прошедшей escape-обработку байтовой последовательности.
Две реализации-парсера, конформные спецификации, MUST давать
одинаковый Value kind для одного и того же тела.

### 5.3 Pair Lines

Pair line имеет форму:

```
key: value
key:: literal-string-value
```

где:

- `key` — один или более точко-разделённых **сегментов** (`key-char+`).
  Каждый сегмент MUST быть непустым и MUST NOT содержать
  разделительный байт (`:`, `,`), разделитель составных
  (`{`, `}`, `[`, `]`, `(`, `)`), или завершитель строки. Байт
  `#` внутри сегмента разрешён, но два последовательных байта `#`
  в начале обрезанной строки образуют маркер комментария (§ 3.4),
  поэтому подстрока `##` в начале строки не может быть ключом.
- Обычный `:`-разделитель диспетчеризует значение по § 5.2.
- Сырой маркер `::` интерпретирует тело как литеральную String —
  без вывода типа, без рекурсии в составные. Escape-последовательности
  (§ 3.7) НЕ обрабатываются в теле многострочной пары (тело —
  весь остаток строки); они ОБРАБАТЫВАЮТСЯ в теле inline-пары
  (§ 5.8).
- `<sep-end>` требует как минимум один пробельный байт или конец
  строки после разделителя. Запись `key:value` / `key::value` (без
  пробела, тело продолжается на той же строке) — ошибка
  `MissingSeparatorSpace` (§ 6.10). Правило `<sep-end>` НЕ
  применяется к разделителям inline-пар (§ 5.8), где пробелы
  опциональны везде.

#### 5.3.1 Валидация ключа

Сегмент ключа, который пуст, содержит запрещённый символ или
коллидирует с маркером комментария в начале обрезанной строки,
порождает ошибку `InvalidKey` (§ 6.4) или `EmptyKey` (§ 6.5).

#### 5.3.2 Разворачивание точечного ключа

Пара `a.b.c: v` семантически эквивалентна цепочке однокомпонентных
пар: `a:` открывает Object, содержащий `b:`, открывающий Object,
содержащий `c: v`. Каждое промежуточное имя MUST разрешаться в
Object — если `a` уже лист (Value не-Object), точечная форма даёт
ошибку `KeyPathConflict` (§ 6.3).

Точечные ключи разворачиваются так же внутри inline-объектов
(§ 5.8): `{a.b: 1, a.c: 2}` даёт `{a: {b: 1, c: 2}}`.

### 5.4 Array-Item Lines

Array-item line вводит одно Value внутрь самого внутреннего открытого
Array (или top-level Array, § 5.0.1). Формы:

1. **Raw-маркерный элемент** — `:: literal` — тело после `::` —
   литеральная String. Применяются правила `<sep-end>`.
2. **Замкнутый inline-объектный элемент** — `{ key: value, … }`.
3. **Замкнутый inline-массивный элемент** — `[ v, v, … ]`.
4. **Пустой inline-объект** — `{}`.
5. **Пустой inline-массив** — `[]`.
6. **Открытое составное** — строка, обрезанная содержимое которой
   `{`, `[`, `(`, или `((`.
7. **Пустая многострочная строка** — `()` или `(())`.
8. **Прочее value** — любое не-маркерное тело, диспетчеризованное
   через § 5.2.
9. **Голый скаляр** — проваливается в правило 8 с результатом
   String, если ни одна форма числа / ключевого слова не совпала.

### 5.5 Дублирующиеся имена

Две пары в одном Object с одинаковым эффективным ключом (после
разворачивания точечного ключа, § 5.3.2) порождают ошибку
`DuplicateKey` (§ 6.2). Span ошибки MUST указывать на дублирующий
ключ, не на первое вхождение.

### 5.6 Многострочные строки

Многострочная строка открывается значением-начало `(` (stripped) или
`((` (verbatim) на строке, не содержащей других непробельных байтов
после опенера. Закрывающая строка — строка, обрезанная содержимое
которой в точности `)` (для stripped) или `))` (для verbatim).

- **Stripped (`( … )`)**: парсер вычисляет **минимальный ведущий
  пробел** среди непустых содержательных строк и удаляет этот
  префикс из каждой строки. Затем строки соединяются одиночными
  `\n`-байтами. Замыкающие пробелы в каждой строке сохраняются.
  Пустые строки внутри блока вносят пустые строки в результат
  объединения.
- **Verbatim (`(( … ))`)**: парсер соединяет содержательные строки
  байт-в-байт через одиночные `\n`-байты; обрезка пробелов не
  выполняется.

#### 5.6.1 Ограничение «терминатор в содержимом»

Внутри stripped-блока строка, обрезанное содержимое которой в точности
`)`, неотличима от закрытия; писатель MUST переключиться на verbatim,
когда такая строка нужна. Аналогично для `))` внутри verbatim.

Поведение парсера симметрично: если содержательная строка внутри
stripped-блока обрезается ровно до `)`, парсер MUST закрыть блок на
этой строке. То же действует для строки, обрезающейся ровно до `))`
внутри verbatim. Поэтому правило для писателя выше MUST соблюдаться
любым эмиттером: чтобы воспроизвести такое содержимое, многострочную
строку необходимо переключить на противоположную форму.

### 5.7 Сокращения пустых составных значений

Четыре последовательности `{}`, `[]`, `()`, `(())` могут появиться
как value-start и обозначают:

| Последовательность | Value |
|----------|-------|
| `{}`     | пустой Object |
| `[]`     | пустой Array |
| `()`     | пустая String |
| `(())`   | пустая String |

### 5.8 Inline-составные значения

**Inline-составное** — это Object или Array, записанный на одной
строке. Тело inline-составного ограничено `{` / `}` для Object или
`[` / `]` для Array. Элементы внутри разделены `,`-байтами.
Замыкающая запятая допускается перед закрывающим разделителем:

```
{a: 1, b: 2}
{a: 1, b: 2,}        ; замыкающая запятая OK
[1, 2, 3]
[1, 2, 3,]
```

#### 5.8.1 Пробелы

Пробелы опциональны везде внутри inline-составного:

```
{a: 1, b: 2}         ; канонично
{ a : 1 , b : 2 }    ; то же Value
{a:1,b:2}            ; то же Value
```

Пробелы **обрезаются** с обоих концов каждого inline-скалярного
значения перед классификацией по § 5.2: `{a:   hello  ,b:x}` даёт
`{a: "hello", b: "x"}`.

#### 5.8.2 Пары

Inline-пара — `key: value` или `key:: value`. Семантика по § 5.3:

- Обычный `:` диспетчеризует значение через § 5.2.
- Сырой `::` интерпретирует значение как литеральную String (без
  вывода типа, но **escape-последовательности ОБРАБАТЫВАЮТСЯ** по
  § 3.7).

Пустое значение (`{a:}`, `{a::}`) — пустая String. Это намеренно:
явно пустое значение пары семантически осмысленно («явно пустое»
поле), и форма компактна.

#### 5.8.3 Элементы

Inline-элемент массива — любой `<inline-value>`. Inline-скаляр
диспетчеризуется через § 5.2 после обработки escape.

**Пустой inline-элемент массива** — позиция, где ожидается один
элемент, но нет ни одного байта, например тело между двумя
запятыми (`[a,, b]`) или сразу после опенера (`[, a]`) — это
НЕ пустая String. Это ошибка `MalformedInlineCompound` (§ 6.12).
Асимметрия с пустыми значениями пар (§ 5.8.2) намеренна: пустое
значение пары привязано к явному ключу, поэтому смысл «пустое
значение для ключа X» однозначен; у пустого элемента массива
такой привязки нет, и форма трактуется как опечатка, а не как
валидный пустой-String элемент.

Одиночная замыкающая запятая непосредственно перед закрывающим
разделителем (`[a, b,]`, `{a: 1, b: 2,}`) — это распознаваемая
замыкающая запятая, а НЕ пустой элемент (§ 5.8).

#### 5.8.4 Вложенные inline-составные

Inline-значение может само быть inline-составным:

```
{outer: {inner: {leaf: 1}}}
[ [1, 2], [3, 4] ]
{users: [ {name: alice}, {name: bob} ]}
```

Глубина вложенности определяется реализацией; переносимые документы
SHOULD оставаться ниже 64 уровней.

#### 5.8.5 Что НЕ может содержать inline-составное

- Многострочные строки (`(`/`((` опенеры).
- Многострочные изменения области. `{` / `[` байт в начале
  inline-значения открывает *вложенное inline-составное*, которое
  MUST закрыться на той же строке.

Байт `{` или `[`, который **НЕ** является первым непробельным
байтом inline-значения (то есть находится в середине скаляра), —
литеральный символ и НЕ открывает вложенное составное. Решение
принимается один раз, когда парсер начинает читать inline-значение:
если первый непробельный байт `{` или `[`, значение — вложенное
составное; иначе значение — inline-скаляр, тянущийся до следующего
неэкранированного `,` / `}` / `]` (либо до конца строки, что —
ошибка по § 6.11). Внутри этого скаляра дополнительные байты `{`
или `[` — литеральные данные без структурного значения. Пример:

```
{a: hello{world, b: x}
```

даёт `{a: "hello{world", b: "x"}`. Внешний `}` закрывает внешний
объект; средне-значимый `{` в `hello{world` — часть String.
Аналогично для `[` в середине значения. `\{` или `\[` (§ 3.7)
нужны только когда литеральная скобка должна быть первым байтом
inline-значения.

#### 5.8.6 Детекция на верхнем уровне

Документ, у которого первая содержательная строка после trim —
`{ … }` или `[ … ]` с балансированными разделителями и
соответствующим закрытием в конце строки, — это **top-level inline
compound** (§ 5.0.1 правила 2–3). Inline-тело **И ЕСТЬ**
корневое Value документа; никакие другие содержательные строки не
разрешены.

### 5.9 Каноническая форма

**Реализация-эмиттер** (writer-conforming) MUST производить
*каноническую* Ktav-сериализацию любого Value. Каноническая форма
является байт-детерминированной: для любого данного Value каждая
реализация-эмиттер MUST производить одну и ту же байтовую
последовательность.

#### 5.9.1 Пробелы, отступы, окончания строк

- Строки терминируются только `LF` (`0x0A`), никогда `CR` или
  `CR LF`. Байт `CR` никогда не появляется в каноническом выводе.
- Отступ — ровно четыре ASCII-пробела на уровень вложенности
  (никаких табов, никаких двух пробелов).
- Документ завершается одиночным замыкающим `LF`, за исключением
  пустого документа (корень — пустой Object без пар), который
  выдаёт ноль байтов.

#### 5.9.2 Комментарии

Комментарии (строки, начинающиеся с `##`) никогда не выводятся.
Комментарии из исходного ввода не являются частью Value-модели и
не имеют канонического представления.

#### 5.9.3 Корень документа

- **Пустой Object корень:** каноническая форма — пустой файл
  (ноль байтов). Никакие `{}` не выводятся. (Парсится обратно по
  § 5.0.1 правило 1 — нет содержательных строк.)
- **Пустой Array корень:** каноническая форма — одна строка
  `[]` с завершающим `LF`. (Парсится обратно по § 5.0.1
  правило 3 — замкнутый inline-массив на первой содержательной
  строке.)
- **Object корень с парами:** каждая пара на своей строке на
  уровне отступа 0; никаких открывающих или закрывающих фигурных
  скобок в корне.
- **Array корень с элементами:** каждый элемент на своей строке
  на уровне отступа 0; никаких открывающих или закрывающих
  квадратных скобок в корне, **если** первый элемент сам не был
  бы по § 5.0.1 распознан как корневой опенер — одиночный `{`
  (правило 4) или одиночный `[` (правило 5). В этом случае
  снятия неоднозначности writer оборачивает корень в явные
  скобки: `[` на своей строке отступа 0, каждый элемент на
  отступе + 1 (4 пробела), и `]` на своей строке отступа 0.

Замечание: pair-строка Object не может быть спутана с
одиночным открывающим брейсом (у неё всегда есть `:`
разделитель); только Array-корни, чей первый элемент — непустое
составное, требуют обёртки.

#### 5.9.4 Составные значения (не-корень)

- **Object value (непустой):** `key: {` плюс новая строка, затем
  каждая пара на своей строке на уровне отступа + 1, затем
  закрывающая `}` на своей строке на текущем уровне отступа.
- **Array value (непустой):** `key: [` плюс новая строка, затем
  каждый элемент на своей строке на уровне отступа + 1, затем
  закрывающая `]` на своей строке на текущем уровне отступа.
- **Пустой Object value:** `key: {}` одной строкой.
- **Пустой Array value:** `key: []` одной строкой.
- Inline-составные (кроме пустых `{}` / `[]`) НИКОГДА не выводятся
  в канонической форме.

#### 5.9.5 Разделители пар

Разделитель пары выбирается по типу/содержимому значения:

- **`key:` (без тела):** когда значение — пустая String `""`.
- **`key: <bytes>` (обычный разделитель + один пробел + тело
  скаляра):** когда значение — непустая обычная String, тело
  которой не содержит `LF`, `CR`, ведущих/хвостовых пробелов,
  управляющих байтов (0x00–0x1F кроме 0x09 `TAB`), не является
  токеном, который § 5.2 классифицировала бы иначе чем String
  (число / `null` / `true` / `false`), и не начинается с `{`
  или `[` (что заставило бы § 5.2 диспетчеризовать тело как
  inline-составное).
- **`key:: <bytes>` (raw-маркер):** когда тело — непустая
  однострочная String, которая иначе была бы переинтерпретирована
  по § 5.2 — как число / `null` / `true` / `false`, как
  inline-составное (тело, начинающееся с `{` или `[`), или
  любая иная не-String классификация.
- **`key: <multi-line>`:** когда значение — String с `LF`, `CR`,
  ведущим/хвостовым пробелом или непечатным управляющим байтом.
- **`key: <compound>`:** когда значение — непустой Object / Array
  (§ 5.9.4) или пустые `{}` / `[]`.

#### 5.9.6 Маркеры элементов массива

- **Голый скалярный элемент:** `<bytes>` на своей строке на
  текущем отступе — когда тело удовлетворяет тем же условиям,
  что и форма `key: <bytes>` § 5.9.5 (включая: не начинается с
  `{` или `[`).
- **Raw-маркерный элемент:** `:: <bytes>` — когда тело иначе было
  бы переинтерпретировано по § 5.2 как число, ключевое слово
  или inline-составное.
- **Пустой Object элемент:** `{}` на своей строке.
- **Пустой Array элемент:** `[]` на своей строке.
- **Непустой Object элемент:** строка `{`, тело на отступе + 1,
  строка `}`.
- **Непустой Array элемент:** строка `[`, тело на отступе + 1,
  строка `]`.
- **Многострочный String элемент:** строка опенера `((` на
  текущем отступе, строки тела на отступе 0 (без ведущих
  пробелов — verbatim сохраняет байты в точности; любая
  индентация была бы инжектирована в значение), строка закрытия
  `))` на текущем отступе.

#### 5.9.7 Выбор формы String

Пусть *body* — байтовая последовательность String Value.

- **Пустая String (`""`):** выводить как `key:` (без тела после
  двоеточия) для пары или `::` (без тела) для элемента массива.
- **Однострочная печатная, без edge-пробелов, без числового /
  ключевого коллизии:** выводить как `key: <body>` (пара) или
  `<body>` (элемент).
- **Однострочная, но классифицировалась бы как Number / `null` /
  `true` / `false`:** выводить как `key:: <body>` (пара) или
  `:: <body>` (элемент), используя raw-маркер.
- **Содержит `LF`, ведущий/хвостовой пробел, или управляющий байт
  (`0x00`–`0x1F` кроме `0x09` `TAB` и `0x0A` `LF`):** выводить как
  verbatim multi-line `((` … `))`. Опенер `((` выводится на строке
  значения (с предшествующим `key: ` для пары или отдельно для
  элемента) на текущем отступе. Тело разбивается по `LF`; каждый
  сегмент выводится одной строкой на **отступе 0** (без ведущих
  пробелов — verbatim сохраняет байты в точности, любая индентация
  была бы инжектирована в значение). Закрытие `))` выводится
  отдельной строкой на текущем отступе.
- **Содержит байт `CR` (`0x0D`):** Value **не представимо** в
  канонической форме. Байт `CR` в String может появиться только
  через escape `\r` внутри inline-составного (§ 3.7), а канонический
  эмиттер никогда не выводит inline-составные для непустых скаляров.
  Реализации MAY выдать любое детерминированное кодирование для
  таких Value (или отвергнуть их), и round-trip свойство § 8.3
  не выполняется. Переносимые документы SHOULD NOT полагаться на
  байты `CR` в String-значениях.

Канонический эмиттер предпочитает verbatim multi-line `((` … `))`
для строк, требующих многострочного представления. Если какой-то
сегмент тела (после разбивки по `LF`) в точности `))`, verbatim
форма невозможна (этот сегмент закрыл бы блок); тогда канонический
эмиттер MUST переключиться на stripped форму `(` … `)` без
ведущего отступа (writer выводит сегменты тела на отступе 0, так
что вычисление общего отступа даёт ноль). Закрывающая `)` строка
выводится на внешнем отступе.

(Обоснование: stripped-форма с закрывателем `)` оставляет `))`
доступным как содержание, что — единственный способ представить
такую последовательность байтов в multi-line значении.)

String, тело которой требует обеих форм — содержит и сегмент
`))`, и сегмент `)` — не представима в канонической multi-line
форме; реализации MAY выдавать любую форму, принимая, что
свойство round-trip строго не выполняется для таких
патологических значений.

#### 5.9.8 Канонизация чисел

- **Integer:** десятичная по основанию 10. Ведущий `+`
  отбрасывается. `-0` и `+0` выводятся как `0`. Никаких
  подчёркиваний. Никаких ведущих нулей (кроме литерала `0`).
  Знак минус сохраняется для отрицательных значений.
- **Float:** выбранная текстовая форма соответствует одной из
  двух альтернатив § 3.6:
  - `sign? digits "." digits ("e" sign? digits)?`
  - `sign? digits "e" sign? digits`

  Только строчная `e`. Подчёркивания удалены. Ведущий `+` на
  мантиссе и экспоненте отбрасывается.

  Каноническая текстовая форма — **кратчайшее десятичное
  разложение, однозначно идентифицирующее Value**, вычисленное
  алгоритмом класса Ryu / Grisu / Steele-White. Для IEEE 754
  binary64 это кратчайшая десятичная, round-trip'ующая в тот же
  binary64.

  - Для значений с малой абсолютной экспонентой используется
    форма `digits "." digits` — например `1.5`, `42.0`, `0.5`.
  - Для значений с большой абсолютной экспонентой используется
    форма с экспонентой — например `1e9`, `2.5e10`, `1.5e-3`.

  Две writer-conforming реализации, использующие одинаковое
  представление Float (binary64), MUST производить идентичный
  вывод. Фикстуры `*.canonical.ktav` предполагают семантику
  binary64.

#### 5.9.9 Ключевые слова

`null`, `true`, `false` — строчные, в точности как показано.

#### 5.9.10 Ключи

Сегмент ключа выводится verbatim, после применения trim (§ 4) на
парсинге. Внутренние пробелы сохраняются. Точечные ключи НЕ
разворачиваются обратно: Value, разобранное из `a.b.c: 1`,
неотличимо от полученного из `a: { b: { c: 1 } }`, и
канонический эмиттер выбирает явную вложенную форму.

#### 5.9.11 Порядок

Пары Object выводятся в порядке вставки — в порядке появления в
разобранном входе или порядке конструирования Value. Реализации
MUST сохранять и выводить этот порядок. Элементы Array выводятся
в естественном порядке массива.

## 6. Ошибки

Соответствующий парсер MUST обнаруживать и сообщать каждую категорию
ошибок ниже для входных данных, проявляющих соответствующий дефект.
Ошибка MUST нести как минимум 1-based номер строки источника и
байт-смещение Span, покрывающий offensive-регион.

### 6.1 Несбалансированные или несовпадающие скобки

`UnbalancedBracket` / `UnclosedCompound`.

### 6.2 Дублирующееся имя

`DuplicateKey` (§ 5.5).

### 6.3 Конфликт пути

`KeyPathConflict` (§ 5.3.2).

### 6.4 Невалидный ключ

`InvalidKey`.

### 6.5 Пустой ключ

`EmptyKey`.

### 6.6 Отсутствие разделителя

`MissingSeparator` — строка в pair-line-режиме без `:`-разделителя.
Применимо внутри тела открытого многострочного Object или на
верхнем уровне, когда корень — Object.

### 6.7 (ЗАРЕЗЕРВИРОВАНО)

Ранее: *Inline non-empty compound*. В 0.5.0 inline non-empty
compounds валидны (§ 5.8). Реализации MUST NOT выводить ошибку с
меткой `InlineNonEmptyCompound` при парсинге 0.5.0-документов.

### 6.8 I/O ошибки

`Io`.

### 6.9 (ЗАРЕЗЕРВИРОВАНО)

Ранее: *Invalid typed scalar*. В 0.5.0 типизированные маркеры
больше не существуют. Реализации MUST NOT выводить ошибку с
меткой `InvalidTypedScalar` при парсинге 0.5.0-документов.

### 6.10 Отсутствие пробела после разделителя

В многострочной pair line разделитель `:` / `::` MUST сопровождаться
как минимум одним пробельным байтом или концом строки. Inline-пары
(§ 5.8) НЕ требуют пробела и НЕ дают этой ошибки.

### 6.11 Незакрытое inline-составное

`UnterminatedInlineCompound` (§ 5.8).

### 6.12 Дефект структуры inline-составного

Структурный дефект внутри замкнутого inline-составного, не
квалифицируемый как `UnterminatedInlineCompound`, — это ошибка
`MalformedInlineCompound`. Покрываемые случаи:

- Ведущая запятая сразу после опенера (`{,a: 1}`, `[,1, 2]`).
- Две или более последовательных запятых (`{a: 1,, b: 2}`,
  `[1,, 2]`).
- Пустой inline-элемент массива (`[a,, b]`); исключение для
  замыкающей запятой § 5.8 по-прежнему применимо к одиночной
  запятой непосредственно перед закрывающим разделителем.
- Прочие структурные дефекты, не дающие `UnterminatedInlineCompound`
  (например, отсутствующий разделитель пары внутри inline-объекта:
  `{a 1, b: 2}`).

Пустые значения пар (`{a:}`, `{a::}`) — НЕ дефект; они дают пустую
String по § 5.8.2.

### 6.13 Неверная escape-последовательность

`BadEscapeSequence` (§ 3.7). Конец строки сразу после обратного
слэша (т.е. `\` без следующего байта до завершителя строки) — также
ошибка `BadEscapeSequence`; inline-скалярный контекст не пересекает
границу строки (§ 3.2).

### 6.14 Orphan-строка после top-level inline

Непустая не-комментарная строка, появляющаяся после top-level
inline-составного (§ 5.0.1 правила 2–3) или после строки закрытия
lone-`{` / lone-`[` корневого опенера (§ 5.0.1 правила 4–5) — где
корневое Value уже полностью построено — это ошибка
`OrphanLineAfterTopLevelInline`.

Категория отдельна от `MissingSeparator` (§ 6.6), потому что
вообще никакое дальнейшее содержание не допускается, независимо
от того, могла бы хвостовая строка распарситься как пара,
элемент или голый скаляр. Span ошибки SHOULD указывать на
offending строку.

## 7. Примеры

См. английский оригинал (`spec.md` § 7) для каноничных примеров.
Перевод примеров не приводится, поскольку содержимое — главным
образом код, а не текст на естественном языке.

## 8. Соответствие

Реализация может заявлять **соответствие Ktav 0.5.0** на одном или
более следующих уровнях.

### 8.1 Parser-conforming

Parser-conforming реализация:

- Удовлетворяет каждому нормативному MUST / MUST NOT в этом
  документе, относящемуся к парсингу.
- Принимает каждую фикстуру из `versions/0.5/tests/valid/` и даёт
  Value, эквивалентное соответствующему `name.json` оракулу.
- Отвергает каждую фикстуру из `versions/0.5/tests/invalid/` с
  категорией ошибки, указанной в `name.json["expected_error"]`.

### 8.2 Writer-conforming

Writer-conforming реализация:

- Удовлетворяет каждому нормативному MUST / MUST NOT в § 5.9.
- Для каждой фикстуры из `versions/0.5/tests/valid/` выдаёт —
  при подаче Value, разобранного из `name.ktav` — байт-точный
  вывод, равный `name.canonical.ktav`.

Каноническая форма определена в § 5.9.

### 8.3 Свойство round-trip

Следующее тождество MUST выполняться для каждого Value V,
производимого parser-conforming реализацией, при выводе и
повторном парсинге writer- и parser-conforming реализациями
того же домена Value:

```
emit_canonical(parse(emit_canonical(V))) == emit_canonical(V)
```

То есть: парсинг канонического вывода и повторный его выпуск
даёт побайтово идентичный вывод. Каноническая форма — это
фиксированная точка цикла parse-emit.

### 8.4 Заявления

Реализации MAY заявлять только parser-, только writer- или оба
уровня соответствия. Реализация MAY параллельно поддерживать
старые версии формата Ktav (например, 0.1.1) под флагом
конфигурации, но поведение по умолчанию для документов без
version-pragma SHOULD быть 0.5.0.

## 9. Соображения безопасности

### 9.1 Исчерпание ресурсов

Реализации SHOULD навязывать конфигурируемые лимиты на: максимальную
глубину вложенности, длину ввода, длину скаляра, общее число Value.
Конкретные лимиты не предписаны.

### 9.2 Числовое переполнение

Integer-литералы, превышающие поддерживаемый реализацией диапазон
(MUST быть не меньше i64; см. § 5.2 правило 13), MUST проваливаться
в String по § 5.2 правило 13.

### 9.3 Кодировка

Ввод MUST быть валидным UTF-8.

## 10. Обоснование (не-нормативно)

См. английский оригинал § 10.

## 11. Ссылки

- RFC 2119, RFC 8174, RFC 3629, RFC 8259, TOML, YAML.

## Приложение A. Изменения

### 0.5.0 — 2026-05-28

- **Breaking:** Удалены типизированные маркеры `:i` и `:f`.
  Числа / булевы / `null` выводятся из лексической формы скаляра
  (§ 3.6, § 5.2). Сырой маркер `::` сохранён.
- **Breaking:** Комментарии теперь используют `##` и MUST занимать
  отдельную строку (§ 3.4).
- **Breaking:** Одиночный `{` / `[` на первой содержательной
  строке — теперь многострочный корневой Object / Array (§ 5.0.1
  правила 4–5). Ранее (0.1.1) это открывало одиночный Object /
  Array элемент внутри корневого Array; JSONL-стиль больше не
  принимается.
- **Breaking:** Float Values больше не сохраняют текстовую форму;
  применяется числовая канонизация (§ 3.6, § 5.2, § 5.9.8).
- **Breaking:** Сегменты ключей обрезаются от ведущих/хвостовых
  ASCII-пробелов (§ 4).
- **Breaking:** Одиночный байт `CR` (без следующего `LF`) — это
  данные, не завершитель строки (§ 3.2).
- **Добавлено:** Inline-составные (§ 5.8).
- **Добавлено:** Восемь escape-последовательностей (§ 3.7).
- **Добавлено:** Грамматика числовых литералов (§ 3.6).
- **Добавлено:** **Каноническая форма (§ 5.9)** — нормативный
  вывод эмиттера для каждого Value, используемый
  writer-conforming реализациями и проверяемый
  `*.canonical.ktav` фикстурами.
- **Добавлено:** **Triple-test conformance suite** — каждая valid
  фикстура имеет три файла: `name.ktav` (вход), `name.json`
  (Value-оракул), `name.canonical.ktav` (writer-оракул).
- **Добавлено:** Ошибки `UnterminatedInlineCompound`,
  `MalformedInlineCompound`, `BadEscapeSequence`
  (§ 6.11, § 6.12, § 6.13).
- **Добавлено:** Ошибка `OrphanLineAfterTopLevelInline` (§ 6.14)
  как отдельная категория, отдельно от `MissingSeparator`.
- **Добавлено:** Приложение B — миграция 0.1.x → 0.5.0.
- **Удалено:** Категории ошибок `InlineNonEmptyCompound` (§ 6.7),
  `InvalidTypedScalar` (§ 6.9). Номера зарезервированы;
  реализации MUST NOT эмиттить ошибки с этими метками для
  0.5.0-документов.
- **Изменено:** Top-level kind detection (§ 5.0.1) расширено и
  переписано — замкнутые inline-составные на первой
  содержательной строке — корневые inline Object / Array;
  одиночный `{` / `[` — многострочный корневой опенер.
- **Изменено:** Соответствие (§ 8) разделено на parser-conforming
  (§ 8.1), writer-conforming (§ 8.2) и свойство round-trip (§ 8.3);
  реализации могут заявлять любое из них.

### 0.1.1 — 2026-05-08

Добавлен top-level Array как распознаваемый тип корня (§ 5.0.1).

### 0.1.0 — 2026-04-22

Первоначальная спецификация.

## Приложение B. Миграция с 0.1.x

Три ломающих изменения требуют внимания при миграции
0.1.x-документа на 0.5.0:

1. **Типизированные маркеры удалены.** Замените `:i 42` / `:f 3.14`
   на голые `42` / `3.14`. Чтобы сохранить литерал как String,
   пишите `:: 42`.
2. **Комментарии используют `##`.** Замените `# comment` строки
   на `## comment`. Одиночный `#` в начале строки в 0.5.0 не
   имеет специального значения и будет разобран как часть
   содержательной строки.
3. **Голые числа теперь типизированы.** `port: 8080` даёт
   `Integer(8080)` в 0.5.0, не `String("8080")`. Если потребитель
   ожидает String, измените источник на `port:: 8080`.

Четвёртое, более узкое изменение применяется только к документам,
эксплуатировавшим 0.1.1-форму lone-`{` / lone-`[` root-Array:

4. **Одиночный `{` / `[` на первой содержательной строке — теперь
   корень, не одиночный Array элемент.** В 0.1.1 документ,
   начинающийся с одиночного `{`, давал корневой Array,
   содержащий один Object; в 0.5.0 одиночный `{` открывает
   корневой Object напрямую. JSONL-стиль (несколько top-level
   объектов на последовательных строках) больше не принимается.
   Оберните такие документы в явные `[` / `]`.

Документ, использующий только формы значений в кавычках, явную
String-форму (`key:: value`) и явные скобки массива, в целом
совместим между обеими версиями.
